--- a/deploy/aws/ecs-stack.yaml
+++ b/deploy/aws/ecs-stack.yaml
@@ -400,19 +400,6 @@ Resources:
           ToPort: 8080
           SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
 
-  ECSTaskExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: !Sub ecs-tasks.${AWS::URLSuffix}
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
-
   X86TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
@@ -426,7 +413,7 @@ Resources:
               HostPort: 8080
               Protocol: tcp
       Family: java-demoapp-x86
-      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
+      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - EC2
@@ -497,7 +484,7 @@ Resources:
               HostPort: 8080
               Protocol: tcp
       Family: java-demoapp-arm64
-      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
+      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - EC2
